# bm.rs

./: Cargo.toml  LICENSE  PKGBUILD  README.md
src/: action_cd.rs  action_conf.rs  action_del.rs  action_init.rs  action_ls.rs  action_set.rs  main.rs  utils.rs
